Fixed the mapping for shift data

--- a/client/src/scss/pages/_shifts.scss
+++ b/client/src/scss/pages/_shifts.scss
@@ -55,6 +55,7 @@
                 width: 100%;
                 height: 10%;
                 margin-top: 1em;
+                margin-bottom: 1em;
                 margin-left: 9%;
             }
         }
@@ -108,27 +109,32 @@
 
     .shift-container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         width: 100%;
         height: 100%;
 
         .shift-data {
+            width: 90%;
             display: flex;
-            flex-direction: column;
+            padding: 0.5em;
+            margin-bottom: 1em;
+            border-radius: 0.5em;
+            border: 1px solid rgb(0, 0, 0);
         }
 
-        .shifts {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-            height: 15%;
-            width: 90%;
-            border: 1px solid rgb(0, 0, 0);
-            border-radius: 0.5em;
-            margin-top: 1em;
-        }
+        // .shifts {
+        //     display: flex;
+        //     flex-direction: column;
+        //     justify-content: space-around;
+        //     align-items: center;
+        //     height: 15%;
+        //     width: 90%;
+
+        //     border-radius: 0.5em;
+        //     margin-top: 1em;
+        // }
 
         .shift-info {
             display: flex;
